@@ -20,7 +20,8 @@ for device and host and fully working examples for device and host:
   Changelog.txt ........... Documentation of changes between versions.
   License.txt ............. Free Open Source license for this package (GPL).
   CommercialLicense.txt ... Alternative commercial license for this package.
-  USBID-License.txt ....... Terms and conditions for free USB VID/PID pairs.
+  USB-ID-FAQ.txt .......... General infos about USB Product- and Vendor-IDs.
+  USB-IDs-for-free.txt .... List and terms of use for free shared PIDs.
 
 Each subdirectory contains a separate Readme file which explains its
 contents.
